--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -126,10 +126,6 @@ canvas {
   width: 100%;
 }
 
-.container header {
-  background-color: #884646;
-}
-
 .container header nav {
   -webkit-animation: swipeFromLeft 1s ease-out;
           animation: swipeFromLeft 1s ease-out;
@@ -191,7 +187,6 @@ canvas {
 
 .container header main {
   padding: 1rem;
-  background-color: blue;
   margin: 15vw;
 }
 
@@ -248,13 +243,8 @@ canvas {
   transition: opacity 0.2s, border 0.3s;
 }
 
-.container section {
-  background-color: #884646;
-}
-
 .container section aside {
-  padding: 1rem;
-  background-color: blue;
+  padding: 3rem;
   margin: 15vw;
 }
 
@@ -272,20 +262,12 @@ canvas {
   -webkit-animation: fadeIn 0.6s ease-in;
           animation: fadeIn 0.6s ease-in;
   font-weight: normal;
-  border-bottom: solid 0.1rem #908282;
-  color: #e7e7e7;
-  line-height: 1.1;
+  color: #908282;
+  line-height: 0.9;
 }
 
 .container section aside .text h2 div {
-  color: #e6e1e1 !important;
-}
-
-.container section aside .text h2 span {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  color: #0f0f0f;
-  background-color: #f0f0f0;
+  color: #faf1f1 !important;
 }
 
 .container section aside .text p {
@@ -295,6 +277,8 @@ canvas {
   font-size: 1.5rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  border-top: solid 0.2rem #908282;
+  border-bottom: solid 0.2rem #908282;
 }
 
 .container section aside .text p i {
@@ -305,7 +289,6 @@ canvas {
 
 .container section article {
   padding: 1rem;
-  background-color: blue;
   margin: 15vw;
 }
 
@@ -313,50 +296,87 @@ canvas {
   max-width: 50%;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  padding: 10rem 0;
+  padding: 1rem 0;
   -webkit-animation: swipeFromRight 1s ease-out;
           animation: swipeFromRight 1s ease-out;
 }
 
 .container section article .text h2 {
-  font-size: 3rem;
+  font-size: 4rem;
   -webkit-animation: fadeIn 0.6s ease-in;
           animation: fadeIn 0.6s ease-in;
   font-weight: normal;
-  border-bottom: solid 0.1rem #908282;
   color: #e7e7e7;
   line-height: 1.1;
 }
 
-.container section article .text h2 div {
-  color: #e6e1e1 !important;
+.container section article .card {
+  border: solid 0.1rem white;
+  margin: 3rem auto;
+  padding: 1rem;
 }
 
-.container section article .text h2 span {
+.container section article .card .info {
+  float: left;
+  padding: 0.2rem;
+  width: 50%;
+}
+
+.container section article .card .info h1 {
+  padding: 0.4rem;
+  font-size: 2.5rem;
+  color: #eeeeee !important;
+}
+
+.container section article .card .info p {
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  color: #cccccc;
+}
+
+.container section article .card .info .technologies-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5rem;
+}
+
+.container section article .card .info .technologies-container i {
+  color: white;
+  font-size: 3rem;
+  margin: 0 0.5rem;
+}
+
+.container section article .card .info .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.container section article .card .info .btn-container a {
+  color: white;
+  border: solid 0.1rem white;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  color: #0f0f0f;
-  background-color: #f0f0f0;
 }
 
-.container section article .text p {
-  margin-top: 1rem;
-  color: #f3f3f3;
-  padding: 1rem 0rem;
-  font-size: 1.5rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.container section article .text p i {
-  color: #f3f3f3;
-  font-size: 3.5rem;
-  margin: 2rem 0.3rem;
+.container section article .card .info .btn-container a:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: opacity 0.3s, border 0.3s;
+  transition: opacity 0.3s, border 0.3s;
 }
 
 .container section footer {
-  padding: 1rem;
-  background-color: blue;
+  padding: 3rem;
   margin: 15vw;
 }
 
@@ -405,29 +425,29 @@ canvas {
   margin: 2rem 0.3rem;
 }
 
-.container .main-alignment {
+.main-alignment {
   margin: 0 auto;
   padding: 1rem;
   max-width: 80%;
   width: 100%;
 }
 
-.container .main-alignment header {
+.main-alignment header {
   padding: 1rem;
   margin-top: 14%;
 }
 
-.container .main-alignment header .wrapper {
+.main-alignment header .wrapper {
   padding: 1rem;
   -webkit-animation: introLoad 1s forwards;
           animation: introLoad 1s forwards;
 }
 
-.container .main-alignment header .wrapper .main {
+.main-alignment header .wrapper .main {
   padding: 1rem;
 }
 
-.container .main-alignment header .wrapper .main h1 {
+.main-alignment header .wrapper .main h1 {
   font-size: 5vw;
   width: auto;
   color: transparent !important;
@@ -435,20 +455,20 @@ canvas {
   -webkit-text-stroke-color: #eeebeb;
 }
 
-.container .main-alignment header .wrapper .main h1 span {
+.main-alignment header .wrapper .main h1 span {
   -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: #eeebeb;
   background-color: #0f0f0f;
 }
 
-.container .main-alignment header .wrapper .main .btn-container {
+.main-alignment header .wrapper .main .btn-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 2rem auto;
 }
 
-.container .main-alignment header .wrapper .main .btn-container a {
+.main-alignment header .wrapper .main .btn-container a {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border: solid 0.2rem black;
@@ -468,7 +488,7 @@ canvas {
   letter-spacing: 0.7rem;
 }
 
-.container .main-alignment header .wrapper .main .btn-container a:hover {
+.main-alignment header .wrapper .main .btn-container a:hover {
   -webkit-box-shadow: 0 0 0 0.2rem black;
           box-shadow: 0 0 0 0.2rem black;
   background-color: black;
@@ -477,7 +497,7 @@ canvas {
   transition: opacity 0.5s, border 0.3s;
 }
 
-.container .main-alignment header .wrapper .about {
+.main-alignment header .wrapper .about {
   margin: 10rem 4rem;
   padding: 2rem;
   max-width: 60rem;
@@ -485,11 +505,11 @@ canvas {
           animation: introLoad 0.9s forwards;
 }
 
-.container .main-alignment header .wrapper .about .margin {
+.main-alignment header .wrapper .about .margin {
   margin-top: 13rem;
 }
 
-.container .main-alignment header .wrapper .about .margin h2 {
+.main-alignment header .wrapper .about .margin h2 {
   font-weight: normal;
   font-size: 3rem;
   padding: 1rem;
@@ -498,19 +518,19 @@ canvas {
   border-bottom: solid 0.1rem;
 }
 
-.container .main-alignment header .wrapper .about .margin h2 div {
+.main-alignment header .wrapper .about .margin h2 div {
   color: #e6e1e1 !important;
   margin: -1.8rem auto;
 }
 
-.container .main-alignment header .wrapper .about .margin h2 span {
+.main-alignment header .wrapper .about .margin h2 span {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   color: #1a1a1a;
   background-color: #0f0f0f;
 }
 
-.container .main-alignment header .wrapper .about .margin p {
+.main-alignment header .wrapper .about .margin p {
   margin-top: 1.5rem;
   color: #f3f3f3;
   padding: 1rem 2rem;
@@ -519,24 +539,24 @@ canvas {
   transition: 1s;
 }
 
-.container .main-alignment header .wrapper .about .margin p i {
+.main-alignment header .wrapper .about .margin p i {
   color: #f3f3f3;
   font-size: 4rem;
   margin: 2rem 0.3rem;
 }
 
-.container .main-alignment header .wrapper .projects {
+.main-alignment header .wrapper .projects {
   padding: 2rem;
   max-width: 100%;
   -webkit-animation: introLoad 0.9s forwards;
           animation: introLoad 0.9s forwards;
 }
 
-.container .main-alignment header .wrapper .projects .margin {
+.main-alignment header .wrapper .projects .margin {
   margin-top: 13rem;
 }
 
-.container .main-alignment header .wrapper .projects .margin h1 {
+.main-alignment header .wrapper .projects .margin h1 {
   font-weight: normal;
   font-size: 3rem;
   padding: 1rem;
@@ -544,44 +564,44 @@ canvas {
   transition: 1s;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card {
+.main-alignment header .wrapper .projects .margin .card {
   border: solid 0.1rem white;
-  margin: 1rem auto;
+  margin: 2rem auto;
   padding: 1.3rem;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info {
+.main-alignment header .wrapper .projects .margin .card .info {
   float: left;
   padding: 0.2rem;
   width: 50%;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info h1 {
+.main-alignment header .wrapper .projects .margin .card .info h1 {
   padding: 0.4rem;
   font-size: 2.5rem;
   color: #eeeeee !important;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info p {
+.main-alignment header .wrapper .projects .margin .card .info p {
   padding: 0.5rem;
   font-size: 1.2rem;
   color: #cccccc;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info .technologies-container {
+.main-alignment header .wrapper .projects .margin .card .info .technologies-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 0.5rem;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info .technologies-container i {
+.main-alignment header .wrapper .projects .margin .card .info .technologies-container i {
   color: white;
   font-size: 3rem;
   margin: 0 0.5rem;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info .btn-container {
+.main-alignment header .wrapper .projects .margin .card .info .btn-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -590,7 +610,7 @@ canvas {
           justify-content: flex-start;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info .btn-container a {
+.main-alignment header .wrapper .projects .margin .card .info .btn-container a {
   color: white;
   border: solid 0.1rem white;
   margin: 1rem 0.5rem;
@@ -602,30 +622,30 @@ canvas {
   transition: 0.5s;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card .info .btn-container a:hover {
+.main-alignment header .wrapper .projects .margin .card .info .btn-container a:hover {
   background-color: white;
   color: black;
   -webkit-transition: opacity 0.3s, border 0.3s;
   transition: opacity 0.3s, border 0.3s;
 }
 
-.container .main-alignment header .wrapper .projects .margin .card img {
+.main-alignment header .wrapper .projects .margin .card img {
   width: 50%;
   padding: 0.1rem;
 }
 
-.container .main-alignment header .wrapper .contact {
+.main-alignment header .wrapper .contact {
   padding: 2rem;
   max-width: 50%;
   -webkit-animation: introLoad 0.9s forwards;
           animation: introLoad 0.9s forwards;
 }
 
-.container .main-alignment header .wrapper .contact .margin {
+.main-alignment header .wrapper .contact .margin {
   margin-top: 15rem;
 }
 
-.container .main-alignment header .wrapper .contact .margin h1 {
+.main-alignment header .wrapper .contact .margin h1 {
   font-weight: normal;
   font-size: 3rem;
   padding: 1rem;
@@ -633,20 +653,20 @@ canvas {
   transition: 1s;
 }
 
-.container .main-alignment header .wrapper .contact .margin .container {
+.main-alignment header .wrapper .contact .margin .container {
   background-color: transparent !important;
   padding: 20px;
   /* Style the submit button with a specific background color etc */
   /* When moving the mouse over the submit button, add a darker green color */
 }
 
-.container .main-alignment header .wrapper .contact .margin .container label {
+.main-alignment header .wrapper .contact .margin .container label {
   color: #e9e9e9;
 }
 
-.container .main-alignment header .wrapper .contact .margin .container input[type="text"],
-.container .main-alignment header .wrapper .contact .margin .container select,
-.container .main-alignment header .wrapper .contact .margin .container textarea {
+.main-alignment header .wrapper .contact .margin .container input[type="text"],
+.main-alignment header .wrapper .contact .margin .container select,
+.main-alignment header .wrapper .contact .margin .container textarea {
   font-family: "Consolas", "Poppins", sans-serif;
   background-color: transparent !important;
   color: white;
@@ -665,7 +685,7 @@ canvas {
   /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-.container .main-alignment header .wrapper .contact .margin .container button {
+.main-alignment header .wrapper .contact .margin .container button {
   font-family: "Poppins", "Consolas", sans-serif;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -679,7 +699,7 @@ canvas {
   cursor: pointer;
 }
 
-.container .main-alignment header .wrapper .contact .margin .container button:hover {
+.main-alignment header .wrapper .contact .margin .container button:hover {
   -webkit-box-shadow: 0 0 0 0.2rem black;
           box-shadow: 0 0 0 0.2rem black;
   background-color: black;
