--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -72,7 +72,7 @@ canvas {
   width: 100%;
 
   header {
-    background-color: rgb(136, 70, 70);
+    // background-color: rgb(136, 70, 70);
 
     nav {
       animation: swipeFromLeft 1s ease-out;
@@ -126,7 +126,7 @@ canvas {
 
     main {
       padding: 1rem;
-      background-color: blue;
+      // background-color: blue;
       margin: 15vw;
       .text {
         transition: 0.5s;
@@ -174,11 +174,11 @@ canvas {
   }
 
   section {
-    background-color: rgb(136, 70, 70);
+    // background-color: rgb(136, 70, 70);
 
     aside {
-      padding: 1rem;
-      background-color: blue;
+      padding: 3rem;
+      // background-color: blue;
       margin: 15vw;
 
       .text {
@@ -191,18 +191,11 @@ canvas {
           font-size: 3rem;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
-          border-bottom: solid 0.1rem #908282;
-          color: rgb(231, 231, 231);
-          line-height: 1.1;
+          color: #908282;
+          line-height: 0.9;
 
           div {
-            color: rgb(230, 225, 225) !important;
-          }
-
-          span {
-            transition: 0.5s;
-            color: rgb(15, 15, 15);
-            background-color: rgb(240, 240, 240);
+            color: rgb(250, 241, 241) !important;
           }
         }
 
@@ -212,6 +205,9 @@ canvas {
           padding: 1rem 0rem;
           font-size: 1.5rem;
           transition: 0.5s;
+          border-top: solid 0.2rem #908282;
+          border-bottom: solid 0.2rem #908282;
+
           i {
             color: rgb(243, 243, 243);
             font-size: 3.5rem;
@@ -223,52 +219,83 @@ canvas {
 
     article {
       padding: 1rem;
-      background-color: blue;
+      // background-color: blue;
       margin: 15vw;
 
       .text {
         max-width: 50%;
         transition: 0.5s;
-        padding: 10rem 0;
+        padding: 1rem 0;
         animation: swipeFromRight 1s ease-out;
 
         h2 {
-          font-size: 3rem;
+          font-size: 4rem;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
-          border-bottom: solid 0.1rem #908282;
           color: rgb(231, 231, 231);
           line-height: 1.1;
-
-          div {
-            color: rgb(230, 225, 225) !important;
-          }
-
-          span {
-            transition: 0.5s;
-            color: rgb(15, 15, 15);
-            background-color: rgb(240, 240, 240);
-          }
         }
+      }
 
-        p {
-          margin-top: 1rem;
-          color: rgb(243, 243, 243);
-          padding: 1rem 0rem;
-          font-size: 1.5rem;
-          transition: 0.5s;
-          i {
-            color: rgb(243, 243, 243);
-            font-size: 3.5rem;
-            margin: 2rem 0.3rem;
+      .card {
+        border: solid 0.1rem white;
+        margin: 3rem auto;
+        padding: 1rem;
+
+        .info {
+          float: left;
+          padding: 0.2rem;
+          width: 50%;
+
+          h1 {
+            padding: 0.4rem;
+            font-size: 2.5rem;
+            color: rgb(238, 238, 238) !important;
+          }
+
+          p {
+            padding: 0.5rem;
+            font-size: 1.2rem;
+            color: rgb(204, 204, 204);
+          }
+
+          .technologies-container {
+            display: flex;
+            padding: 0.5rem;
+            i {
+              color: white;
+              font-size: 3rem;
+              margin: 0 0.5rem;
+            }
+          }
+
+          .btn-container {
+            display: flex;
+            justify-content: flex-start;
+            a {
+              color: white;
+              border: solid 0.1rem rgb(255, 255, 255);
+              margin: 1rem 0.5rem;
+              padding: 0.5rem 1.5rem;
+              font-size: 20px;
+              text-transform: uppercase;
+              letter-spacing: 0.2rem;
+              transition: 0.5s;
+            }
+
+            a:hover {
+              background-color: rgb(255, 255, 255);
+              color: rgb(0, 0, 0);
+              transition: opacity 0.3s, border 0.3s;
+            }
           }
         }
       }
     }
 
     footer {
-      padding: 1rem;
-      background-color: blue;
+      padding: 3rem;
+      // background-color: blue;
       margin: 15vw;
 
       .text {
@@ -311,248 +338,248 @@ canvas {
       }
     }
   }
+}
 
-  .main-alignment {
-    margin: 0 auto;
+.main-alignment {
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 80%;
+  width: 100%;
+
+  header {
     padding: 1rem;
-    max-width: 80%;
-    width: 100%;
-
-    header {
+    margin-top: 14%;
+    .wrapper {
       padding: 1rem;
-      margin-top: 14%;
-      .wrapper {
+      animation: introLoad 1s forwards;
+
+      .main {
         padding: 1rem;
-        animation: introLoad 1s forwards;
 
-        .main {
-          padding: 1rem;
+        h1 {
+          font-size: 5vw;
+          width: auto;
+          color: transparent !important;
+          -webkit-text-stroke-width: 1.5px;
+          -webkit-text-stroke-color: rgb(238, 235, 235);
 
-          h1 {
-            font-size: 5vw;
-            width: auto;
-            color: transparent !important;
+          span {
             -webkit-text-stroke-width: 1.5px;
             -webkit-text-stroke-color: rgb(238, 235, 235);
+            background-color: rgb(15, 15, 15);
+          }
+        }
+
+        .btn-container {
+          display: flex;
+          margin: 2rem auto;
+
+          a {
+            transition: 0.5s;
+            border: solid 0.2rem black;
+            color: rgb(0, 0, 0);
+            margin: 0 0.2rem;
+            padding: 0.5rem 1.2rem;
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 0.7rem;
+
+            transition: 0.5s;
+            border: solid 0.2rem black;
+            color: rgb(0, 0, 0);
+            margin: 0 0.2rem;
+            padding: 0.5rem 1.2rem;
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 0.7rem;
+          }
+
+          a:hover {
+            box-shadow: 0 0 0 0.2rem black;
+            background-color: rgb(0, 0, 0);
+            color: rgb(224, 223, 223);
+            transition: opacity 0.5s, border 0.3s;
+          }
+        }
+      }
+
+      .about {
+        margin: 10rem 4rem;
+        padding: 2rem;
+        max-width: 60rem;
+        animation: introLoad 0.9s forwards;
+
+        .margin {
+          margin-top: 13rem;
+          h2 {
+            font-weight: normal;
+            font-size: 3rem;
+            padding: 1rem;
+            transition: 1s;
+            border-bottom: solid 0.1rem;
+
+            div {
+              color: rgb(230, 225, 225) !important;
+              margin: -1.8rem auto;
+            }
 
             span {
-              -webkit-text-stroke-width: 1.5px;
-              -webkit-text-stroke-color: rgb(238, 235, 235);
+              transition: 0.5s;
+              color: rgb(26, 26, 26);
               background-color: rgb(15, 15, 15);
             }
           }
 
-          .btn-container {
-            display: flex;
+          p {
+            margin-top: 1.5rem;
+            color: rgb(243, 243, 243);
+            padding: 1rem 2rem;
+            font-size: 1.5rem;
+            transition: 1s;
+            i {
+              color: rgb(243, 243, 243);
+              font-size: 4rem;
+              margin: 2rem 0.3rem;
+            }
+          }
+        }
+      }
+
+      .projects {
+        padding: 2rem;
+        max-width: 100%;
+        animation: introLoad 0.9s forwards;
+
+        .margin {
+          margin-top: 13rem;
+
+          h1 {
+            font-weight: normal;
+            font-size: 3rem;
+            padding: 1rem;
+            transition: 1s;
+          }
+
+          .card {
+            // background-color: rgb(17, 17, 17);
+            border: solid 0.1rem white;
             margin: 2rem auto;
+            padding: 1.3rem;
 
-            a {
-              transition: 0.5s;
-              border: solid 0.2rem black;
-              color: rgb(0, 0, 0);
-              margin: 0 0.2rem;
-              padding: 0.5rem 1.2rem;
-              font-size: 20px;
-              text-transform: uppercase;
-              letter-spacing: 0.7rem;
+            .info {
+              float: left;
+              padding: 0.2rem;
+              width: 50%;
 
-              transition: 0.5s;
-              border: solid 0.2rem black;
-              color: rgb(0, 0, 0);
-              margin: 0 0.2rem;
-              padding: 0.5rem 1.2rem;
-              font-size: 20px;
-              text-transform: uppercase;
-              letter-spacing: 0.7rem;
+              h1 {
+                padding: 0.4rem;
+                font-size: 2.5rem;
+                color: rgb(238, 238, 238) !important;
+              }
+
+              p {
+                padding: 0.5rem;
+                font-size: 1.2rem;
+                color: rgb(204, 204, 204);
+              }
+
+              .technologies-container {
+                display: flex;
+                padding: 0.5rem;
+                i {
+                  color: white;
+                  font-size: 3rem;
+                  margin: 0 0.5rem;
+                }
+              }
+
+              .btn-container {
+                display: flex;
+                justify-content: flex-start;
+                a {
+                  color: white;
+                  border: solid 0.1rem rgb(255, 255, 255);
+                  margin: 1rem 0.5rem;
+                  padding: 0.5rem 1.5rem;
+                  font-size: 20px;
+                  text-transform: uppercase;
+                  letter-spacing: 0.2rem;
+                  transition: 0.5s;
+                }
+
+                a:hover {
+                  background-color: rgb(255, 255, 255);
+                  color: rgb(0, 0, 0);
+                  transition: opacity 0.3s, border 0.3s;
+                }
+              }
+            }
+            img {
+              width: 50%;
+              padding: 0.1rem;
+            }
+          }
+        }
+      }
+
+      .contact {
+        padding: 2rem;
+        max-width: 50%;
+        animation: introLoad 0.9s forwards;
+
+        .margin {
+          margin-top: 15rem;
+
+          h1 {
+            font-weight: normal;
+            font-size: 3rem;
+            padding: 1rem;
+            transition: 1s;
+          }
+
+          .container {
+            background-color: transparent !important;
+            padding: 20px;
+
+            label {
+              color: rgb(233, 233, 233);
             }
 
-            a:hover {
+            input[type="text"],
+            select,
+            textarea {
+              font-family: "Consolas", "Poppins", sans-serif;
+              background-color: transparent !important;
+              color: white;
+              width: 100%; /* Full width */
+              padding: 1rem 1rem; /* Some padding */
+              font-size: 1.2rem;
+              border: 1px solid #ccc; /* Gray border */
+              margin-top: 6px; /* Add a top margin */
+              margin-bottom: 16px; /* Bottom margin */
+              resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+            }
+
+            /* Style the submit button with a specific background color etc */
+            button {
+              font-family: "Poppins", "Consolas", sans-serif;
+              transition: 0.5s;
+              border: solid 0.2rem black;
+              color: rgb(0, 0, 0) !important;
+              margin: 0 0.2rem;
+              padding: 0.5rem 1.2rem;
+              font-size: 20px;
+              text-transform: uppercase;
+              letter-spacing: 0.7rem;
+              cursor: pointer;
+            }
+
+            /* When moving the mouse over the submit button, add a darker green color */
+            button:hover {
               box-shadow: 0 0 0 0.2rem black;
               background-color: rgb(0, 0, 0);
-              color: rgb(224, 223, 223);
+              color: rgb(224, 223, 223) !important;
               transition: opacity 0.5s, border 0.3s;
-            }
-          }
-        }
-
-        .about {
-          margin: 10rem 4rem;
-          padding: 2rem;
-          max-width: 60rem;
-          animation: introLoad 0.9s forwards;
-
-          .margin {
-            margin-top: 13rem;
-            h2 {
-              font-weight: normal;
-              font-size: 3rem;
-              padding: 1rem;
-              transition: 1s;
-              border-bottom: solid 0.1rem;
-
-              div {
-                color: rgb(230, 225, 225) !important;
-                margin: -1.8rem auto;
-              }
-
-              span {
-                transition: 0.5s;
-                color: rgb(26, 26, 26);
-                background-color: rgb(15, 15, 15);
-              }
-            }
-
-            p {
-              margin-top: 1.5rem;
-              color: rgb(243, 243, 243);
-              padding: 1rem 2rem;
-              font-size: 1.5rem;
-              transition: 1s;
-              i {
-                color: rgb(243, 243, 243);
-                font-size: 4rem;
-                margin: 2rem 0.3rem;
-              }
-            }
-          }
-        }
-
-        .projects {
-          padding: 2rem;
-          max-width: 100%;
-          animation: introLoad 0.9s forwards;
-
-          .margin {
-            margin-top: 13rem;
-
-            h1 {
-              font-weight: normal;
-              font-size: 3rem;
-              padding: 1rem;
-              transition: 1s;
-            }
-
-            .card {
-              // background-color: rgb(17, 17, 17);
-              border: solid 0.1rem white;
-              margin: 1rem auto;
-              padding: 1.3rem;
-
-              .info {
-                float: left;
-                padding: 0.2rem;
-                width: 50%;
-
-                h1 {
-                  padding: 0.4rem;
-                  font-size: 2.5rem;
-                  color: rgb(238, 238, 238) !important;
-                }
-
-                p {
-                  padding: 0.5rem;
-                  font-size: 1.2rem;
-                  color: rgb(204, 204, 204);
-                }
-
-                .technologies-container {
-                  display: flex;
-                  padding: 0.5rem;
-                  i {
-                    color: white;
-                    font-size: 3rem;
-                    margin: 0 0.5rem;
-                  }
-                }
-
-                .btn-container {
-                  display: flex;
-                  justify-content: flex-start;
-                  a {
-                    color: white;
-                    border: solid 0.1rem rgb(255, 255, 255);
-                    margin: 1rem 0.5rem;
-                    padding: 0.5rem 1.5rem;
-                    font-size: 20px;
-                    text-transform: uppercase;
-                    letter-spacing: 0.2rem;
-                    transition: 0.5s;
-                  }
-
-                  a:hover {
-                    background-color: rgb(255, 255, 255);
-                    color: rgb(0, 0, 0);
-                    transition: opacity 0.3s, border 0.3s;
-                  }
-                }
-              }
-              img {
-                width: 50%;
-                padding: 0.1rem;
-              }
-            }
-          }
-        }
-
-        .contact {
-          padding: 2rem;
-          max-width: 50%;
-          animation: introLoad 0.9s forwards;
-
-          .margin {
-            margin-top: 15rem;
-
-            h1 {
-              font-weight: normal;
-              font-size: 3rem;
-              padding: 1rem;
-              transition: 1s;
-            }
-
-            .container {
-              background-color: transparent !important;
-              padding: 20px;
-
-              label {
-                color: rgb(233, 233, 233);
-              }
-
-              input[type="text"],
-              select,
-              textarea {
-                font-family: "Consolas", "Poppins", sans-serif;
-                background-color: transparent !important;
-                color: white;
-                width: 100%; /* Full width */
-                padding: 1rem 1rem; /* Some padding */
-                font-size: 1.2rem;
-                border: 1px solid #ccc; /* Gray border */
-                margin-top: 6px; /* Add a top margin */
-                margin-bottom: 16px; /* Bottom margin */
-                resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-              }
-
-              /* Style the submit button with a specific background color etc */
-              button {
-                font-family: "Poppins", "Consolas", sans-serif;
-                transition: 0.5s;
-                border: solid 0.2rem black;
-                color: rgb(0, 0, 0) !important;
-                margin: 0 0.2rem;
-                padding: 0.5rem 1.2rem;
-                font-size: 20px;
-                text-transform: uppercase;
-                letter-spacing: 0.7rem;
-                cursor: pointer;
-              }
-
-              /* When moving the mouse over the submit button, add a darker green color */
-              button:hover {
-                box-shadow: 0 0 0 0.2rem black;
-                background-color: rgb(0, 0, 0);
-                color: rgb(224, 223, 223) !important;
-                transition: opacity 0.5s, border 0.3s;
-              }
             }
           }
         }
