--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -335,13 +335,14 @@ html {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   body {
-    transition: all 0.2s;
+    transition: all 0.3s;
   }
 
   .container {
     padding: 0;
+    margin: 0;
 
     header {
       nav {
@@ -353,46 +354,91 @@ html {
           display: flex;
         }
       }
+    }
+  }
+}
 
-      .text {
-        margin: 15vw 0;
-        animation: swipeFromRight 1.2s ease-out;
+@media screen and (max-width: 600px) {
+  body {
+    transition: all 0.2s;
+  }
 
-        h1 {
-          text-align: center;
-          font-size: 10vw;
-          animation: fadeIn 1.2s ease-in;
+  .container {
+    padding: 0;
+    margin: 0;
+
+    header {
+      nav {
+        padding: 3.5vw 1vw;
+        a {
+          h1 {
+            font-size: 5vw;
+          }
         }
       }
 
-      .btn-container {
-        animation: fadeIn 2s ease-in;
+      main {
+        background-color: red;
+        display: flex;
+        justify-content: flex-start;
+        padding: 1.5rem;
+        margin: 15vw 0;
+        .text {
+          max-width: 100%;
+          background-color: blue;
+          h1 {
+            font-weight: normal;
+            text-align: left;
+            font-size: 10vw;
+          }
+        }
 
-        a {
-          padding: 0.2rem 0.8rem;
-          font-size: 15px;
-          letter-spacing: 0.4rem;
+        .btn-container {
+          margin: 1rem 0;
+          display: flex;
+          justify-content: flex-start;
+
+          a {
+            font-size: 3vw;
+            margin: 0 0.3rem;
+            padding: 1.5vw 4vw;
+          }
         }
       }
     }
 
-    article {
-      margin: 10rem 0;
+    section {
+      aside {
+        background-color: red;
+        display: flex;
+        justify-content: center;
+        padding: 1.5rem;
+        margin: 15vw 0;
 
-      .text {
-        text-align: center;
+        .text {
+          background-color: blue;
+          max-width: inherit;
+          padding: 1rem;
 
-        h2 {
-          font-size: 11vw;
+          h2 {
+            font-size: 10vw;
+            text-align: left;
+            font-weight: normal;
+            line-height: 1.25;
+          }
+
+          p {
+            font-size: 5vw;
+            text-align: left;
+            font-weight: normal;
+          }
         }
+      }
 
-        div {
-          margin: -1rem auto !important;
-        }
+      article {
+      }
 
-        span {
-          margin: 0 0.1rem !important;
-        }
+      footer {
       }
     }
   }
