--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -297,50 +297,81 @@ html {
     }
 
     footer {
-      padding: 3rem;
+      padding: 1rem;
       // background-color: blue;
       margin: 15vw;
 
       .text {
-        max-width: 50%;
         transition: 0.5s;
-        padding: 10rem 0;
+        padding: 1rem;
         animation: swipeFromRight 1s ease-out;
 
         h2 {
           font-size: 3rem;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
-          border-bottom: solid 0.1rem #908282;
           color: rgb(231, 231, 231);
-          line-height: 1.1;
-
-          div {
-            color: rgb(230, 225, 225) !important;
-          }
-
-          span {
-            transition: 0.5s;
-            color: rgb(15, 15, 15);
-            background-color: rgb(240, 240, 240);
-          }
         }
 
-        p {
-          margin-top: 1rem;
-          color: rgb(243, 243, 243);
-          padding: 1rem 0rem;
-          font-size: 1.5rem;
-          transition: 0.5s;
-          i {
-            color: rgb(243, 243, 243);
-            font-size: 3.5rem;
-            margin: 2rem 0.3rem;
+        span {
+          color: #908282;
+        }
+
+        form {
+          margin: 2rem 0;
+          .form-container {
+            h3 {
+              color: white;
+              font-weight: normal;
+              font-size: 1.7rem;
+            }
+
+            input {
+              margin: 1rem 0;
+              padding: 1rem 1rem;
+              border: solid 0.01rem #908282;
+              color: white;
+              background-color: transparent;
+              font-size: 1.2rem;
+              width: 30rem;
+            }
+
+            textarea {
+              font-family: "Consolas", sans-serif;
+              height: 10rem;
+              border: solid 0.01rem #908282;
+              color: white;
+              background-color: transparent;
+              font-size: 1.2rem;
+              width: 30rem;
+              padding: 0.5rem;
+            }
+
+            input[name="submit"] {
+              width: 10rem;
+              padding: 0.5rem 1rem;
+              text-transform: uppercase;
+              letter-spacing: 0.4rem;
+              transition: 0.5s;
+            }
+
+            input[name="submit"]:hover {
+              background-color: white;
+              color: black;
+              transition: 0.8s;
+            }
           }
         }
       }
     }
   }
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
 }
 
 @media screen and (max-width: 1000px) {
@@ -452,7 +483,6 @@ html {
           max-width: 100%;
           //background-color: blue;
           padding: 1rem;
-          
 
           h2 {
             font-size: 10vw;
