new changes and contact form script

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -414,7 +414,6 @@ html {
 }
 
 .container section footer .text form .form-container input {
-  margin: 1rem 0;
   padding: 1rem 1rem;
   border: solid 0.01rem #908282;
   color: white;
@@ -435,19 +434,23 @@ html {
 }
 
 .container section footer .text form .form-container input[name="submit"] {
-  width: 10rem;
+  margin: 2rem 0;
+  font-family: "Poppins", sans-serif;
+  width: 30rem;
   padding: 0.5rem 1rem;
+  border: solid 0.01rem #908282;
   text-transform: uppercase;
   letter-spacing: 0.4rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  color: #cfcfcf;
 }
 
 .container section footer .text form .form-container input[name="submit"]:hover {
   background-color: #908282;
-  color: black;
-  -webkit-transition: 0.8s;
-  transition: 0.8s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: #ffffff;
 }
 
 input:focus,
@@ -615,18 +618,5 @@ button:focus {
     width: 80vw;
     font-size: 4vw;
   }
-}
-
-.dark .about h2 {
-  color: white !important;
-}
-
-.dark .about h2 span {
-  background-color: white !important;
-  color: black !important;
-}
-
-.dark .about .text p {
-  color: white !important;
 }
 /*# sourceMappingURL=index.css.map */
