--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -327,7 +327,6 @@ html {
             }
 
             input {
-              margin: 1rem 0;
               padding: 1rem 1rem;
               border: solid 0.01rem #908282;
               color: white;
@@ -348,17 +347,21 @@ html {
             }
 
             input[name="submit"] {
-              width: 10rem;
+              margin: 2rem 0;
+              font-family: "Poppins", sans-serif;
+              width: 30rem;
               padding: 0.5rem 1rem;
+              border: solid 0.01rem #908282;
               text-transform: uppercase;
               letter-spacing: 0.4rem;
               transition: 0.5s;
+              color: #cfcfcf;
             }
 
             input[name="submit"]:hover {
               background-color: #908282;
-              color: black;
-              transition: 0.8s;
+              transition: 0.5s;
+              color: #ffffff;
             }
           }
         }
@@ -568,300 +571,3 @@ button:focus {
     }
   }
 }
-
-.dark {
-  .about {
-    h2 {
-      color: white !important;
-
-      span {
-        background-color: white !important;
-        color: rgb(0, 0, 0) !important;
-      }
-    }
-
-    .text {
-      p {
-        color: white !important;
-      }
-    }
-  }
-}
-
-// @media screen and (max-width: 1800px) {
-//   body {
-//     transition: all 0.2s;
-//   }
-// }
-//
-// @media screen and (max-width: 1400px) {
-//   body {
-//     transition: all 0.3s;
-//   }
-// }
-//
-// @media screen and (max-width: 1000px) {
-//   body {
-//     transition: all 0.4s;
-//   }
-//
-//   nav {
-//     margin-bottom: 5rem;
-//     background-color: yellowgreen !important;
-//
-//     .container {
-//       max-width: 100%;
-//     }
-//
-//     ul {
-//       display: none;
-//     }
-//
-//     img {
-//       display: block;
-//     }
-//   }
-//
-//   .container {
-//     padding: 1rem;
-//     max-width: 95%;
-//
-//     header {
-//       margin: 9rem 0 !important;
-//
-//       h1 {
-//         width: 100% !important;
-//         font-size: 12vw !important;
-//       }
-//     }
-//   }
-//
-//   .btn-container {
-//     a {
-//       display: flex;
-//       font-size: 2.5vw !important;
-//       padding: 1vw 2vw !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 600px) {
-//   body {
-//     transition: all 0.4s;
-//   }
-//
-//   .wrapper {
-//     h1 {
-//       font-size: 10vw !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 200px) {
-//   body {
-//     transition: all 0.3s;
-//   }
-// }
-//
-// button {
-//   border: none;
-//   background-color: transparent;
-// }
-//
-// @keyframes introLoad {
-//   from {
-//     transform: translateY(180px);
-//   }
-//   to {
-//     transform: translateY(0);
-//   }
-// }
-
-// @media screen and (max-width: 2600px) {
-//   nav {
-//     max-width: 2100px !important;
-//   }
-//   .container {
-//     margin: 10rem 15rem !important;
-//     width: auto !important;
-//
-//     h1 {
-//       font-size: var(--heading-font-size-600) !important;
-//       width: 50rem !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 1940px) {
-//   nav {
-//     max-width: 1600px !important;
-//   }
-//   .container {
-//     margin: 10rem 20rem !important;
-//     width: 90vw !important;
-//
-//     h1 {
-//       font-size: var(--heading-font-size) !important;
-//       width: 80rem !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 1800px) {
-//   nav {
-//     max-width: 1500px !important;
-//   }
-//   .container {
-//     margin: 10rem 15rem !important;
-//     width: auto !important;
-//
-//     h1 {
-//       font-size: var(--heading-font-size-600) !important;
-//       width: 50rem !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 1500px) {
-//   nav {
-//     max-width: 1200px !important;
-//   }
-//
-//   //
-//   header {
-//     .container {
-//       margin: 5rem 8rem !important;
-//       width: auto !important;
-//
-//       h1 {
-//         font-size: 3.8rem !important;
-//       }
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 1200px) {
-//   header {
-//     nav {
-//       padding: 0.8rem 0 5rem 0;
-//       max-width: 750px !important;
-//     }
-//   }
-//
-//   .container {
-//     margin: 3rem 2rem !important;
-//
-//     h1 {
-//       font-size: var(--heading-font-size-600) !important;
-//       width: auto !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 1024px) {
-//   header {
-//     nav {
-//       padding: 0.8rem 0 5rem 0;
-//       max-width: 950px !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 920px) {
-//   header {
-//     nav {
-//       padding: 0.8rem 0 5rem 0;
-//       max-width: 850px !important;
-//     }
-//
-//     .about {
-//       margin: 15rem -3rem !important;
-//       transition: 0.5s;
-//
-//       i {
-//         font-size: 1.5rem;
-//       }
-//
-//       h2 {
-//         border-bottom: solid 0.1rem;
-//       }
-//
-//       p {
-//         width: 80vw;
-//         padding: 1rem !important;
-//       }
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 820px) {
-//   .mobile {
-//     ion-icon {
-//       color: white !important;
-//     }
-//   }
-//   header {
-//     nav {
-//       padding: 0.8rem 0 5rem 0;
-//       max-width: 750px !important;
-//
-//       ul {
-//         display: none;
-//       }
-//     }
-//
-//     .about {
-//       h2 {
-//         border-bottom: solid 0.1rem;
-//         font-size: 1.8rem !important;
-//       }
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 770px) {
-//   header {
-//     nav {
-//       padding: 0.8rem 0 5rem 0;
-//       max-width: 700px !important;
-//     }
-//   }
-// }
-//
-// @media screen and (max-width: 600px) {
-//   header {
-//     nav {
-//       h1 {
-//         font-size: 2rem;
-//         margin: 0.7rem 2rem;
-//       }
-//     }
-//     .container {
-//       margin: 0 2rem !important;
-//
-//       h1 {
-//         font-size: var(--heading-font-size-ios) !important;
-//         width: auto !important;
-//       }
-//
-//       .btn-container {
-//         a {
-//           font-size: 1.1rem;
-//           letter-spacing: 0.4rem;
-//           margin: 1rem 0.3rem !important;
-//           padding: auto !important;
-//         }
-//       }
-//     }
-//
-//     .about {
-//       h2 {
-//         width: 90vw;
-//       }
-//
-//       div {
-//         margin: -1rem auto !important;
-//       }
-//     }
-//   }
-// }
