--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -255,7 +255,7 @@ html {
   line-height: 0.9;
 }
 
-.container section aside .text h2 div {
+.container section aside .text h2 span {
   color: #faf1f1 !important;
 }
 
