--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -183,7 +183,7 @@ html {
           color: #908282;
           line-height: 0.9;
 
-          div {
+          span {
             color: rgb(250, 241, 241) !important;
           }
         }
