--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -61,7 +61,6 @@ html {
   width: 100%;
 
   header {
-    // background-color: rgb(136, 70, 70);
 
     nav {
       animation: swipeFromLeft 1s ease-out;
@@ -114,10 +113,15 @@ html {
     }
 
     main {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
       padding: 1rem;
-      // background-color: blue;
-      margin: 15vw;
+      margin: 15vw; // make responsive
+      max-width: 70%;
       .text {
+        width: 100%;
         transition: 0.5s;
         padding: 1rem;
         animation: swipeFromRight 1s ease-out;
@@ -136,7 +140,9 @@ html {
 
       .btn-container {
         display: flex;
-        margin: 3rem auto;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin: 3rem 0;
         animation: fadeIn 1s ease-in;
 
         a {
@@ -147,7 +153,7 @@ html {
           margin: 0 0.5rem;
           border: solid 0.01rem #908282;
           padding: 0.5rem 1.2rem;
-          font-size: 1.2rem;
+          font-size: 1.2vw;
           text-transform: uppercase;
           letter-spacing: 0.5rem;
         }
@@ -163,33 +169,35 @@ html {
   }
 
   section {
-    // background-color: rgb(136, 70, 70);
 
     aside {
-      padding: 3rem;
-      // background-color: blue;
-      margin: 15vw;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
 
+      padding: 1rem;
+      margin: 15vw;
+      max-width: 50%;
       .text {
-        max-width: 50%;
+        width: 100%;
         transition: 0.5s;
         padding: 10rem 0;
         animation: swipeFromRight 1s ease-out;
 
         h2 {
-          font-size: 3rem;
+          font-size: 3.85rem;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
-          color: #908282;
+          color: rgb(255, 255, 255);
           line-height: 0.9;
 
           span {
-            color: rgb(250, 241, 241) !important;
+            color: #908282;
           }
         }
 
         p {
-          margin-top: 1rem;
+          margin: 1rem 0;
           color: rgb(243, 243, 243);
           padding: 1rem 0rem;
           font-size: 1.5rem;
@@ -200,19 +208,19 @@ html {
           i {
             color: rgb(243, 243, 243);
             font-size: 3.5rem;
-            margin: 2rem 0.3rem;
+            margin: 2.4rem 0.4rem;
           }
         }
       }
     }
 
     article {
+      display: block;
       padding: 1rem;
-      // background-color: blue;
       margin: 15vw;
+      max-width: 100%;
 
       .text {
-        max-width: 50%;
         transition: 0.5s;
         padding: 1rem 0;
         animation: swipeFromRight 1s ease-out;
@@ -231,15 +239,19 @@ html {
       }
 
       .card {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        transition: 0.5s;
+        padding: 1rem;
+        animation: swipeFromRight 1s ease-out;
         background-color: rgba(0, 0, 0, 0.267);
         border: solid 0.1rem white;
         margin: 3rem auto;
-        padding: 1rem;
 
         .info {
-          float: left;
-          padding: 0.2rem;
-          width: 50%;
+          padding: 1rem;
+          max-width: 50%;
 
           h1 {
             padding: 0.4rem;
@@ -255,6 +267,7 @@ html {
 
           .technologies-container {
             display: flex;
+            justify-content: flex-end;
             padding: 0.5rem;
             i {
               color: white;
@@ -264,21 +277,19 @@ html {
           }
 
           .btn-container {
-            margin: 1rem auto;
             display: flex;
+            justify-content: flex-end;
             animation: fadeIn 1s ease-in;
 
             a {
-              z-index: 2;
               animation: swipeFromLeft 0.5s ease-in;
-              transition: 0.3s;
               color: rgb(207, 207, 207);
               margin: 0 0.5rem;
               border: solid 0.01rem #908282;
               padding: 0.5rem 1.2rem;
               font-size: 1.2rem;
               text-transform: uppercase;
-              letter-spacing: 0.5rem;
+              letter-spacing: 0.4rem;
             }
 
             a:hover {
@@ -291,23 +302,28 @@ html {
         }
 
         img {
-          width: 50%;
+          max-width: 50%;
         }
       }
     }
 
     footer {
+      display: flex;
+      justify-content: flex-start;
+
       padding: 1rem;
-      // background-color: blue;
       margin: 15vw;
+      max-width: 100%;
 
       .text {
+        max-width: 30%;
         transition: 0.5s;
         padding: 1rem;
         animation: swipeFromRight 1s ease-out;
 
         h2 {
-          font-size: 3rem;
+          font-size: 2rem;
+          max-width: 70%;
           animation: fadeIn 0.6s ease-in;
           font-weight: normal;
           color: rgb(231, 231, 231);
@@ -316,53 +332,54 @@ html {
         span {
           color: #908282;
         }
+      }
 
-        form {
-          margin: 2rem 0;
-          .form-container {
-            h3 {
-              color: white;
-              font-weight: normal;
-              font-size: 1.7rem;
-            }
+      form {
+        max-width: 80%;
+        padding: 0 2rem;
+        .form-container {
+          display: block;
+          h3 {
+            color: white;
+            font-weight: normal;
+            font-size: 1.7rem;
+          }
 
-            input {
-              padding: 1rem 1rem;
-              border: solid 0.01rem #908282;
-              color: white;
-              background-color: transparent;
-              font-size: 1.2rem;
-              width: 30rem;
-            }
+          input {
+            background-color: transparent;
+            padding: 1rem 1rem;
+            border: solid 0.01rem #908282;
+            color: white;
+            font-size: 1.2rem;
+            width: 30rem;
+          }
 
-            textarea {
-              font-family: "Consolas", sans-serif;
-              height: 10rem;
-              border: solid 0.01rem #908282;
-              color: white;
-              background-color: transparent;
-              font-size: 1.2rem;
-              width: 30rem;
-              padding: 0.5rem;
-            }
+          textarea {
+            font-family: "Consolas", sans-serif;
+            height: 10rem;
+            border: solid 0.01rem #908282;
+            color: white;
+            background-color: transparent;
+            font-size: 1.2rem;
+            width: 30rem;
+            padding: 0.5rem;
+          }
 
-            input[name="submit"] {
-              margin: 2rem 0;
-              font-family: "Poppins", sans-serif;
-              width: 30rem;
-              padding: 0.5rem 1rem;
-              border: solid 0.01rem #908282;
-              text-transform: uppercase;
-              letter-spacing: 0.4rem;
-              transition: 0.5s;
-              color: #cfcfcf;
-            }
+          input[name="submit"] {
+            font-family: "Poppins", sans-serif;
+            width: 30rem;
+            padding: 0.5rem 1rem;
+            border: solid 0.01rem #908282;
+            text-transform: uppercase;
+            letter-spacing: 0.4rem;
+            transition: 0.5s;
+            color: #cfcfcf;
+          }
 
-            input[name="submit"]:hover {
-              background-color: #908282;
-              transition: 0.5s;
-              color: #ffffff;
-            }
+          input[name="submit"]:hover {
+            background-color: #908282;
+            transition: 0.5s;
+            color: #ffffff;
           }
         }
       }
@@ -441,7 +458,6 @@ button:focus {
           padding: 1rem;
 
           .info {
-            
             width: 50%;
 
             h1 {
